fixing 401 returning 404, adding dashboard alerts method
